--- a/app/globals.css
+++ b/app/globals.css
@@ -21,3 +21,13 @@
     background-color: var(--tw-color-lightgreen);
   }
 }
+
+
+@keyframes scroll {
+  from {
+    transform: translateX(100%);
+  }
+  to {
+    transform: translateX(-100%);
+  }
+}
