--- a/app/globals.css
+++ b/app/globals.css
@@ -1,4 +1,6 @@
 @import "tailwindcss";
+@import "swiper/css";
+@import "swiper/css/pagination";
 
 @layer theme {
   :root {
@@ -34,4 +36,20 @@
 
 html, body{
   background-color: #DDDDDD;
+}
+
+@layer components {
+  .swiper-pagination-bullet {
+    background-color: #ccc !important;
+    width: 12px;
+    height: 12px;
+    border-radius: 50%;
+    opacity: 1;
+    margin: 0 6px;
+    transition: background-color 0.3s ease;
+  }
+
+  .swiper-pagination-bullet-active {
+    background-color: var(--tw-color-darkgreen) !important;
+  }
 }
